fix logo z-index

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -29,7 +29,7 @@
   &__logo {
     position: absolute;
     top: 0;
-    z-index: 100;
+    z-index: 110;
   }
 
   .burger {
